--- a/public/chat.html
+++ b/public/chat.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
-  <link rel="stylesheet" href="css/style.css">
-  <title>ChatCord App</title>
+  <link rel="stylesheet" href="./css/stye.css">
+  <title>ChatHub App</title>
 </head>
 <body>
   <div class="chat-container">
@@ -57,6 +57,8 @@
     </div>
   </div>
 
+
+  <script src="/socket.io/socket.io.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
