--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
 			integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
 			crossorigin="anonymous"
 		/>
-		<link rel="stylesheet" href="css/style.css" />
-		<title>ChatCord App</title>
+		<link rel="stylesheet" href="./css/stye.css" />
+		<title>ChatHub App</title>
 	</head>
 	<body>
 		<div class="join-container">
