--- a/public/chat.html
+++ b/public/chat.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
   <link rel="stylesheet" href="./css/stye.css">
+  <link rel="shortcut icon" href="./img/favicon-16x16.png">
   <title>ChatHub App</title>
 </head>
 <body>
